# fsfvi

./: .gitignore  API_INTEGRATION_TEST.md  DEPLOYMENT.md  FSFVI_IFAD_Pitch_Note.md  README.md  SECURITY_DOCUMENTATION.md  development.env.template  production.env.template
backend/: .gitignore  README.md  data_preparation.py  deploy.sh  fsfvi_aws_key.pem  requirements-test.txt  requirements.txt  test_endpoints.py
docs/: ARCHITECTURE_SUMMARY.md  AUTHENTICATION_CLEANUP.md  BUDGET_DISCREPANCY_FIX.md  DUMMY_DATA_FEATURE.md  (+17 more)
kenya_backend/: .env.example  Cargo.toml  README.md  build_script.ps1  create_db.sql
kenya_backend/.sqlx/: query-1dab705235548f1db17573443c9d2ee5f0c6715dea641bc58944cc2363c9df7e.json  query-5acd2be5036b17b13f4be91c7acaff73227306ca267b49dcc902582de5835136.json  query-b83ecad9a41a2498d1942f3b108ee38e53e6ae2f457071d7d4c5d58b30f32c86.json  query-ec65dd238de2be97041e68196aa8824cd8d512cd571ebcbbb22999fc1fa3ea36.json  query-f1f6c7b98fb8e2b491be2df1412b5a596f42155144da9571cb567ce012e75093.json  query-f87cbab9e2649bb1cb73f2e2724a93cce4dc593452240437290cd486493e406b.json  query-ff39fa3d2a10fbc929b1582034bff40bc55e039e74d9bf1fdf93fca25c603c26.json
kenya_backend/migrations/: 001_initial.sql
kenya_backend/src/: main.rs
kenya_backend/src/config/: mod.rs
kenya_backend/src/handlers/: auth_handler.rs
kenya_backend/src/middleware/: security.rs
kenya_backend/src/models/: auth.rs  user.rs
kenya_backend/src/services/: audit_service.rs  auth_service.rs  mod.rs  password_service.rs  token_service.rs  two_fa_service.rs
kenya_backend/src/utils/: mod.rs
(+87 files in other folders)
