[package]
name = "kenya_backend"
version = "0.1.0"
edition = "2021"
description = "High-security authentication backend for Kenya FSFVI platform"
authors = ["FSFVI Team"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
argon2 = "0.5"

# Environment and config
dotenv = "0.15"
config = "0.14"

# Database (SQLite for simplicity, can be changed to PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Rate limiting
governor = "0.6"

# Security headers (implemented via custom middleware)
# actix-web has built-in support for custom middleware

# Input validation
validator = { version = "0.18", features = ["derive"] }

# Random number generation
rand = "0.8"

# Futures utilities  
futures-util = "0.3"

# HTTP client (for future integrations)
reqwest = { version = "0.11", features = ["json"] }

# 2FA / TOTP
totp-lite = "1.0.3"
qrcode = "0.13"
base64 = "0.21"
image = "0.24"
